# playbook-media-typescript-sdk/src/typescript-fetch/apis/PostsApi.ts
@@ -1,0 +1,78 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Social Service
+ * Solomon AI Social Service
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: yoanyomba@solomon-ai.co
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  GetPostsResponse,
+  InternalErrorMessageResponse,
+  PathUnknownErrorMessageResponse,
+  Status,
+  ValidationErrorMessageResponse,
+} from '../models/index';
+import {
+    GetPostsResponseFromJSON,
+    GetPostsResponseToJSON,
+    InternalErrorMessageResponseFromJSON,
+    InternalErrorMessageResponseToJSON,
+    PathUnknownErrorMessageResponseFromJSON,
+    PathUnknownErrorMessageResponseToJSON,
+    StatusFromJSON,
+    StatusToJSON,
+    ValidationErrorMessageResponseFromJSON,
+    ValidationErrorMessageResponseToJSON,
+} from '../models/index';
+
+export interface GetPostsRequest {
+    userId: string;
+}
+
+/**
+ * 
+ */
+export class PostsApi extends runtime.BaseAPI {
+
+    /**
+     * This endpoint enables a client to query all posts tied to a given user id
+     * Get all the posts of a given user
+     */
+    async getPostsRaw(requestParameters: GetPostsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<GetPostsResponse>> {
+        if (requestParameters.userId === null || requestParameters.userId === undefined) {
+            throw new runtime.RequiredError('userId','Required parameter requestParameters.userId was null or undefined when calling getPosts.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/api/v1/users/{userId}/posts`.replace(`{${"userId"}}`, encodeURIComponent(String(requestParameters.userId))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => GetPostsResponseFromJSON(jsonValue));
+    }
+
+    /**
+     * This endpoint enables a client to query all posts tied to a given user id
+     * Get all the posts of a given user
+     */
+    async getPosts(requestParameters: GetPostsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<GetPostsResponse> {
+        const response = await this.getPostsRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+}
